# tz2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  setup.py  test_integration.py
src/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/bot/: bot.py  config.py  dialogs.py  main.py
src/core/: celery.py  celery_beat_config.py  id_generator.py  settings.py  wsgi.py
src/tz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
